--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,25 +1,23 @@
 name: Publish Packages
 
-on:
+on: 
   push:
-    branches: [ master ]
+    tags:
+      - "*"
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 3.1.101
-    - name: Install dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --configuration Release --no-restore
-    - name: Publish FluentEmail.Core
-      uses: brandedoutcast/publish-nuget@v2.5.2
-      with:
-          PROJECT_FILE_PATH: chiao_test/chiao_test.csproj
-          NUGET_KEY: ${{secrets.NUGET_API_KEY}}
+      - name: set release version and set delete source code
+        run: |
+          echo ::set-env name=CI_COMMIT_TAG::${GITHUB_REF#refs/*/}
+          echo ::set-env name=API_KEY::${{secrets.NUGET_API_KEY}}
+      - name: complie
+        run: cd chiao_test; dotnet restore; dotnet build --configuration Release --no-restore; dotnet pack -p:PackageVersion=${{ env.CI_COMMIT_TAG }}
+      - name: push-nupkg
+        run: dotnet nuget push chiao_test/bin/Debug/chiao_test.${{ env.CI_COMMIT_TAG }}.nupkg -k ${{ env.API_KEY }} -s https://api.nuget.org/v3/index.json
+        uses: brandedoutcast/publish-nuget@v2.5.2
+        with:
+            PROJECT_FILE_PATH: chiao_test/chiao_test.csproj
+            NUGET_KEY: 
