--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,14 +6,52 @@ on:
       - "*"
 
 jobs:
-  build:
+  publish:
+    name: build, pack & publish
     runs-on: ubuntu-latest
     steps:
       - name: set release version and set delete source code
         run: |
           echo ::set-env name=CI_COMMIT_TAG::${GITHUB_REF#refs/*/}
           echo ::set-env name=API_KEY::${{secrets.NUGET_API_KEY}}
-      - name: complie
-        run: cd chiao_test; dotnet restore; dotnet build --configuration Release --no-restore; dotnet pack -p:PackageVersion=${{ env.CI_COMMIT_TAG }}
-      - name: push-nupkg
-        run: dotnet nuget push chiao_test/bin/Debug/chiao_test.${{ env.CI_COMMIT_TAG }}.nupkg -k ${{ env.API_KEY }} -s https://api.nuget.org/v3/index.json
+      - uses: actions/checkout@v2
+
+      # - name: Setup dotnet
+      #   uses: actions/setup-dotnet@v1
+      #   with:
+      #     dotnet-version: 3.1.200
+
+      # Publish
+      - name: publish on version change
+        id: publish_nuget
+        uses: rohith/publish-nuget@v2
+        with:
+          # Filepath of the project to be packaged, relative to root of repository
+          PROJECT_FILE_PATH: chiao_test/chiao_test.csproj
+          
+          # NuGet package id, used for version detection & defaults to project name
+          # PACKAGE_NAME: Core
+          
+          # Filepath with version info, relative to root of repository & defaults to PROJECT_FILE_PATH
+          # VERSION_FILE_PATH: chiao_test/obj/chiao_test.csproj.nuget.g.props
+
+          # Regex pattern to extract version info in a capturing group
+          # VERSION_REGEX: ^\s*<Version>(.*)<\/Version>\s*$
+          
+          # Useful with external providers like Nerdbank.GitVersioning, ignores VERSION_FILE_PATH & VERSION_REGEX
+          VERSION_STATIC: ${{ env.CI_COMMIT_TAG }}
+
+          # Flag to toggle git tagging, enabled by default
+          # TAG_COMMIT: true
+
+          # Format of the git tag, [*] gets replaced with actual version
+          # TAG_FORMAT: v*
+
+          # API key to authenticate with NuGet server
+          NUGET_KEY: ${{ env.API_KEY }}
+
+          # NuGet server uri hosting the packages, defaults to https://api.nuget.org
+          # NUGET_SOURCE: https://api.nuget.org
+
+          # Flag to toggle pushing symbols along with nuget package to the server, disabled by default
+          # INCLUDE_SYMBOLS: false
