--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,10 +36,10 @@ jobs:
           # VERSION_FILE_PATH: chiao_test/obj/chiao_test.csproj.nuget.g.props
 
           # Regex pattern to extract version info in a capturing group
-          VERSION_REGEX: ^\s*<PackageVersion>(.*)<\/PackageVersion>\s*$
+          # VERSION_REGEX: ^\s*<PackageVersion>(.*)<\/PackageVersion>\s*$
           
           # Useful with external providers like Nerdbank.GitVersioning, ignores VERSION_FILE_PATH & VERSION_REGEX
-          #VERSION_STATIC: "1.0.2"
+          VERSION_STATIC: "1.0.2"
 
           # Flag to toggle git tagging, enabled by default
           # TAG_COMMIT: true
