--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,15 +16,15 @@ jobs:
           echo ::set-env name=API_KEY::${{secrets.NUGET_API_KEY}}
       - uses: actions/checkout@v2
 
-      # - name: Setup dotnet
-      #   uses: actions/setup-dotnet@v1
-      #   with:
-      #     dotnet-version: 3.1.200
+      - name: Setup dotnet
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 1.0.3
 
       # Publish
       - name: publish on version change
         id: publish_nuget
-        uses: brandedoutcast/publish-nuget@v2
+        uses: rohith/publish-nuget@v2
         with:
           # Filepath of the project to be packaged, relative to root of repository
           PROJECT_FILE_PATH: chiao_test/chiao_test.csproj
@@ -39,7 +39,7 @@ jobs:
           # VERSION_REGEX: ^\s*<PackageVersion>(.*)<\/PackageVersion>\s*$
           
           # Useful with external providers like Nerdbank.GitVersioning, ignores VERSION_FILE_PATH & VERSION_REGEX
-          VERSION_STATIC: "1.0.2"
+          # VERSION_STATIC: "1.0.2"
 
           # Flag to toggle git tagging, enabled by default
           # TAG_COMMIT: true
