--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,10 +19,12 @@ jobs:
       - uses: actions/checkout@v2
 
       # Publish
-      - name: publish on version change
+      - name: complie
         run: |
           dotnet build -c Release chiao_test/chiao_test.csproj
           dotnet pack  --no-build -c Release chiao_test/chiao_test.csproj -p:PackageVersion=1.0.3 -o .
+      - name: publish
+        run: 
           dotnet nuget push *.nupkg -k $(API_KEY) -s https://api.nuget.org/v3/index.json
           
           
