--- a/chiao_test/chiao_test.csproj
+++ b/chiao_test/chiao_test.csproj
@@ -3,5 +3,6 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
     </PropertyGroup>
+    <Version>1.0.4</Version>
 
 </Project>
