--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,25 +6,49 @@ on:
       - master
     tags:
       - "*"
-
 jobs:
   publish:
     name: build, pack & publish
     runs-on: ubuntu-latest
     steps:
-      - name: set release version and set delete source code
-        run: |
-          echo ::set-env name=CI_COMMIT_TAG::${GITHUB_REF#refs/*/}
-          echo ::set-env name=API_KEY::${{secrets.NUGET_API_KEY}}
       - uses: actions/checkout@v2
 
+      # - name: Setup dotnet
+      #   uses: actions/setup-dotnet@v1
+      #   with:
+      #     dotnet-version: 3.1.200
+
       # Publish
-      - name: complie
-        run: |
-          dotnet build -c Release chiao_test/chiao_test.csproj
-          dotnet pack  --no-build -c Release chiao_test/chiao_test.csproj -p:PackageVersion=1.0.3 -o .
-      - name: publish
-        run: 
-          dotnet nuget push *.nupkg -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json
+      - name: publish on version change
+        id: publish_nuget
+        uses: rohith/publish-nuget@v2
+        with:
+          # Filepath of the project to be packaged, relative to root of repository
+          PROJECT_FILE_PATH: chiao_test/chiao_test.csproj
           
+          # NuGet package id, used for version detection & defaults to project name
+          # PACKAGE_NAME: Core
           
+          # Filepath with version info, relative to root of repository & defaults to PROJECT_FILE_PATH
+          VERSION_FILE_PATH: chiao_test/obj/chiao_test.csproj.nuget.g.props
+
+          # Regex pattern to extract version info in a capturing group
+          VERSION_REGEX: ^\s*<Version>(.*)<\/Version>\s*$
+          
+          # Useful with external providers like Nerdbank.GitVersioning, ignores VERSION_FILE_PATH & VERSION_REGEX
+          # VERSION_STATIC: 1.0.0
+
+          # Flag to toggle git tagging, enabled by default
+          # TAG_COMMIT: true
+
+          # Format of the git tag, [*] gets replaced with actual version
+          # TAG_FORMAT: v*
+
+          # API key to authenticate with NuGet server
+          NUGET_KEY: ${{secrets.NUGET_API_KEY}}
+
+          # NuGet server uri hosting the packages, defaults to https://api.nuget.org
+          # NUGET_SOURCE: https://api.nuget.org
+
+          # Flag to toggle pushing symbols along with nuget package to the server, disabled by default
+          # INCLUDE_SYMBOLS: false
