--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,4 +23,4 @@ jobs:
     - name: Create the package
       run: dotnet pack --configuration Release chiao_test -p:PackageVersion=1.0.4 -o .
     - name: Publish the package to GPR
-      run: dotnet nuget push *.nupkg
+      run: dotnet nuget push *.nupkg -k ${{secrets.NUGET_API_KEY}}
